# SpaTracker

./: .gitignore  README.md  demo.py  download_models.nu  pyproject.toml
models/cotracker/datasets/: fast_capture_dataset.py
models/cotracker/models/: build_cotracker.py
models/cotracker/utils/: visualizer.py
models/monoD/depth_anything/: build.py  dpt.py
models/monoD/zoeDepth/midas_c/midas/: base_model.py
models/monoD/zoeDepth/midas_c/midas/backbones/: beit.py
models/monoD/zoeDepth/models/: model_io.py
models/monoD/zoeDepth/models/base_models/: midas.py
models/spatracker/datasets/: fast_capture_dataset.py
models/spatracker/models/: build_spatracker.py
models/spatracker/models/core/spatracker/: blocks.py  softsplat.py
models/spatracker/models/core/spatracker/dpt/: base_model.py
models/spatracker/utils/: visualizer.py
models/torchhub/facebookresearch_dinov2_main/dinov2/train/: ssl_meta_arch.py
models/torchhub/facebookresearch_dinov2_main/dinov2/utils/: utils.py
utils/: __init__.py
