[project]
name = "spatracker"
version = "0.1.0"
description = "Official PyTorch implementation of SpatialTracker: Tracking Any 2D Pixels in 3D Space"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "cupy>=13.3.0",
  "easydict>=1.13",
  "einops>=0.8.0",
  "flow-vis>=0.1",
  "matplotlib>=3.10.0",
  "moviepy>=2.1.2",
  "opencv-python>=4.11.0.86",
  "scikit-image>=0.25.0",
  "scikit-learn>=1.6.1",
  "timm==0.9.2",
  # torch & stuff
  "torch>=2.5.1",
  "torchaudio>=2.5.1",
  "torchvision>=0.20.1",
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }]
torchvision = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]
